k8s/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-certs-ingress
  namespace: demo-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "kube-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  tls:
    - hosts:
        - jussun.com
        - www.jussun.com
      secretName: secret-name-tls
  rules:
    - host: jussun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api-service
                port:
                  number: 80
    - host: www.jussun.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-api-service
                port:
                  number: 80
